# test-subtitles

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
src/: display_audio_upload_interface.py  display_comparison_interface.py  display_model_selection_interface.py  landing.py
src/styles/: landing_style.py
