[project]
name = "test-subtitles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "openai>=1.101.0",
    "requests>=2.32.4",
    "streamlit>=1.48.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
]

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
